# l10n

./: LICENSE  README.md  l10n.cabal  stack.yaml
src/: L10n.hs
src/L10n/: TimeLocale.hs
