name:                l10n
version:             0.1.0.0
synopsis:            Enables providing localization as typeclass instances in separate files.
description:         Please see README.md
homepage:            https://github.com/louispan/l10n#readme
license:             BSD3
license-file:        LICENSE
author:              Louis Pan
maintainer:          louis@pan.me
copyright:           2016 Louis Pan
category:            Text
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     L10n
                       L10n.TimeLocale
  build-depends:       base >= 4.7 && < 5
                     , text
                     , time
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/louispan/l10n
